fix: hide x overflow

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -44,3 +44,7 @@
     }
   }
 }
+
+body {
+  overflow-x: hidden;
+}
